--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -11,16 +11,15 @@
 }
 
 div.game_end{
-    margin: 0 0 0 0;
     position: absolute;
-    display: block;
-    height: 100vh;
-    width: 100vw;
-    background-color: rgb(63, 63, 63);
+    top: 150px;
+    left: 50%;
+    margin: 0 0 0 -150px;
+    display: none;
+    width: 300px;
+    height: 72px;
     text-align: center;
     div#result{
-        position: absolute;
-        top: 50%;
         font-size: 3rem;
     }
 }
@@ -30,7 +29,10 @@ div.w_max{
 }
 
 div.game_reset{
-    margin: 0 auto;
+    position: absolute;
+    top: 600px;
+    left: 50%;
+    margin: 0px 0 0 -40px;
     width: 0;
     height: 0;
     padding: 30px 40px 30px 40px;
@@ -42,8 +44,8 @@ div.game_reset{
     cursor: pointer;
 }
 
-p{
-    // margin: 100px 0 0 0;
+div.turn p{
+    margin: 80px 0 0 0;
     text-align: center;
     span{
         margin: 0 10px 0 0;
